--- a/wndMain.ui
+++ b/wndMain.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>552</width>
+    <height>396</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -16,40 +16,132 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>400</width>
+    <height>300</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>700</width>
+    <height>700</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="btnOK">
+   <property name="sizePolicy">
+    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+     <horstretch>0</horstretch>
+     <verstretch>0</verstretch>
+    </sizepolicy>
+   </property>
+   <widget class="QPushButton" name="btnExit">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>250</y>
+      <x>440</x>
+      <y>350</y>
       <width>87</width>
       <height>27</height>
      </rect>
     </property>
     <property name="text">
-     <string>OK</string>
+     <string>Exit</string>
     </property>
     <property name="default">
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QPushButton" name="btnCancel">
+   <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>250</y>
-      <width>87</width>
-      <height>27</height>
+      <x>10</x>
+      <y>120</y>
+      <width>521</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="chkBitmap">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>151</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Cancel</string>
+     <string>Bitmap background</string>
     </property>
-    <property name="default">
-     <bool>true</bool>
+   </widget>
+   <widget class="QGraphicsView" name="graphBackground">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>40</y>
+      <width>106</width>
+      <height>80</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QToolButton" name="btnBackground">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>40</y>
+      <width>41</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>...</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="editBackground">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>40</y>
+      <width>361</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>some filename</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="chkLabel">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>140</y>
+      <width>61</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Label</string>
+    </property>
+   </widget>
+   <widget class="QPlainTextEdit" name="editLabel">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>170</y>
+      <width>341</width>
+      <height>91</height>
+     </rect>
     </property>
    </widget>
   </widget>
