--- a/wndMain.ui
+++ b/wndMain.ui
@@ -144,6 +144,19 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="btnGetQuote">
+    <property name="geometry">
+     <rect>
+      <x>426</x>
+      <y>170</y>
+      <width>111</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Generate quote</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
