--- a/wndMain.ui
+++ b/wndMain.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>552</width>
-    <height>396</height>
+    <height>459</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -41,8 +41,8 @@
    <widget class="QPushButton" name="btnExit">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>350</y>
+      <x>450</x>
+      <y>420</y>
       <width>87</width>
       <height>27</height>
      </rect>
@@ -155,6 +155,45 @@
     </property>
     <property name="text">
      <string>Generate quote</string>
+    </property>
+   </widget>
+   <widget class="Line" name="line_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>270</y>
+      <width>521</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnGenerateImg">
+    <property name="geometry">
+     <rect>
+      <x>426</x>
+      <y>300</y>
+      <width>111</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Generate image</string>
+    </property>
+   </widget>
+   <widget class="QGraphicsView" name="graphImg">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>290</y>
+      <width>171</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <property name="interactive">
+     <bool>false</bool>
     </property>
    </widget>
   </widget>
